--- a/package.json
+++ b/package.json
@@ -24,7 +24,10 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "expo-barcode-scanner": "~8.0.0",
+    "expo-camera": "~8.0.0",
+    "expo-permissions": "~8.0.0"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
