--- a/package.json
+++ b/package.json
@@ -14,9 +14,13 @@
     "@react-navigation/stack": "^5.0.5",
     "axios": "^0.19.2",
     "expo": "~36.0.0",
+    "expo-barcode-scanner": "~8.0.0",
+    "expo-camera": "~8.0.0",
+    "expo-permissions": "~8.0.0",
     "react": "~16.9.0",
     "react-dom": "~16.9.0",
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
+    "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~1.5.0",
     "react-native-reanimated": "~1.4.0",
     "react-native-responsive-screen": "^1.4.1",
@@ -24,10 +28,7 @@
     "react-native-screens": "2.0.0-alpha.12",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
-    "redux": "^4.0.5",
-    "expo-barcode-scanner": "~8.0.0",
-    "expo-camera": "~8.0.0",
-    "expo-permissions": "~8.0.0"
+    "redux": "^4.0.5"
   },
   "devDependencies": {
     "babel-preset-expo": "~8.0.0",
