--- a/package.json
+++ b/package.json
@@ -22,10 +22,12 @@
     "react-native": "https://github.com/expo/react-native/archive/sdk-36.0.0.tar.gz",
     "react-native-countdown-component": "^2.7.1",
     "react-native-gesture-handler": "~1.5.0",
+    "react-native-numeric-input": "^1.8.3",
     "react-native-reanimated": "~1.4.0",
     "react-native-responsive-screen": "^1.4.1",
     "react-native-safe-area-context": "0.6.0",
     "react-native-screens": "2.0.0-alpha.12",
+    "react-native-super-grid": "^3.2.0",
     "react-native-web": "~0.11.7",
     "react-redux": "^7.2.0",
     "redux": "^4.0.5"
